--- a/front_end/styles.css
+++ b/front_end/styles.css
@@ -5,3 +5,13 @@
     border: 1px solid black;
     background-color: #fff;
 }
+
+.piano {
+    display: none;
+
+}
+
+.piano.active {
+    display:block;
+    margin-bottom: 10px;
+}
